<resources>
    <string name="app_name">TP3</string>
    <string name="photo_de_profil">photo de profil</string>
    <string name="image">image</string>
    <string name="nom">nom</string>
    <string name="telephone">numero de telephone</string>
    <string name="website">website</string>
    <string name="adresse">adresse</string>
    <string name="a_propos_de_moi">a propos de moi</string>
    <string name="enregistrer">enregistrer</string>
    <string name="ajouter_voisin">ajouter un voisin</string>
    <string name="forme_correcte" />
    <string name="mail_invalide" />
    <string name="site_invalide">Website invalide</string>
    <string name="image_invalide">Image invalide</string>
    <string name="neighbor_added">Voisin ajouté</string>
    <string name="ajouter_un_utilisateur">Ajouter un utilisateur</string>
    <string name="titre_liste">toto</string>
    <string name="liste_voisins">Liste des voisins</string>
    <string name="del_user_question">Voulez-vous supprimer cet utilisateur?</string>
</resources>