<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/photo_de_profil"
        android:src="@drawable/ic_baseline_person_outline_24" />

    <ScrollView
        android:id="@+id/scroll_view_container"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imageLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/image"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nomLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/imageLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nom"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/nomLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telephone"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/websiteLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/telLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/website"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adressLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/websiteLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/adresse"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/moiLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/adressLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/a_propos_de_moi"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enregistrer" />

</androidx.constraintlayout.widget.ConstraintLayout>